@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.168 2005/09/13 18:57:31 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.169 2005/09/14 23:40:32 agaffney Exp $
 
 *GLI-gtkfe-0.2 (13 Aug 2005)
+
+  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  browse button is disabled along with URI entry field
 
   13 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   FileBrowser is now URIBrowser
