@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.374 2005/09/05 18:23:56 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.375 2005/09/14 23:40:32 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  14 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIUtility.py:
+  get_snapshot_from_cd() returns '' instead of 'file://' if nothing found
 
   5 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
